@@ -4634,6 +4634,7 @@ NULL,//                                                        scheduleTitle,
                                                            CALLBACK_(NULL,NULL),  // restoreHandleError
                                                            CALLBACK_(getCryptPasswordFromConfig,jobNode),
                                                            CALLBACK_INLINE(bool,(void *userData),{ UNUSED_VARIABLE(userData); return pauseFlags.restore; },NULL),
+// TODO: use isCommandAborted9)
                                                            CALLBACK_INLINE(bool,(void *userData),{ UNUSED_VARIABLE(userData); return jobNode->requestedAbortFlag; },NULL),
                                                            &logHandle
                                                           );
@@ -12608,7 +12609,7 @@ LOCAL void serverCommand_scheduleListRemove(ClientInfo *clientInfo, IndexHandle 
     }
 
     // remove from list
-    List_removeAndFree(&jobNode->job.options.scheduleList,scheduleNode,CALLBACK_((ListNodeFreeFunction)freeScheduleNode,NULL));
+    List_removeAndFree(&jobNode->job.options.scheduleList,scheduleNode);
 
     // notify about changed schedule
     Job_scheduleChanged(jobNode);
@@ -13115,10 +13116,7 @@ LOCAL void serverCommand_persistenceListRemove(ClientInfo *clientInfo, IndexHand
     }
 
     // remove from list
-    List_removeAndFree(&jobNode->job.options.persistenceList,
-                       persistenceNode,
-                       CALLBACK_((ListNodeFreeFunction)Job_freePersistenceNode,NULL)
-                      );
+    List_removeAndFree(&jobNode->job.options.persistenceList,persistenceNode);
 
 //TODO: remove
     // update "forever"-nodes
@@ -19355,6 +19353,24 @@ SERVER_COMMANDS[] =
 /*---------------------------------------------------------------------*/
 
 /***********************************************************************\
+* Name   : freeCommandInfo
+* Purpose: free command info
+* Input  : commandInfo - command info
+*          userData    - user data (ignored)
+* Output : -
+* Return : -
+* Notes  : -
+\***********************************************************************/
+
+LOCAL void freeCommandInfo(CommandInfoNode *commandInfoNode, void *userData)
+{
+  assert(commandInfoNode != NULL);
+
+  UNUSED_VARIABLE(commandInfoNode);
+  UNUSED_VARIABLE(userData);
+}
+
+/***********************************************************************\
 * Name   : freeCommand
 * Purpose: free command
 * Input  : command  - command
@@ -19477,6 +19493,7 @@ LOCAL bool getCommand(ClientInfo            *clientInfo,
     (*authorizationState   ) = command.authorizationState;
     (*id                   ) = command.id;
     StringMap_move(argumentMap,command.argumentMap);
+    StringMap_done(command.argumentMap);
 
     return TRUE;
   }
@@ -19570,7 +19587,7 @@ LOCAL void networkClientThreadCode(ClientInfo *clientInfo)
       // remove command info
       SEMAPHORE_LOCKED_DO(&clientInfo->lock,SEMAPHORE_LOCK_TYPE_READ_WRITE,LOCK_TIMEOUT)
       {
-        List_removeAndFree(&clientInfo->commandInfoList,commandInfoNode,CALLBACK_(NULL,NULL));
+        List_removeAndFree(&clientInfo->commandInfoList,commandInfoNode);
       }
     }
     else
@@ -19759,8 +19776,7 @@ LOCAL void initClient(ClientInfo *clientInfo)
 
   clientInfo->quitFlag              = FALSE;
 
-// TODO: free correct?
-  List_init(&clientInfo->commandInfoList,CALLBACK_(NULL,NULL),CALLBACK_((ListNodeFreeFunction)freeCommand,NULL));
+  List_init(&clientInfo->commandInfoList,CALLBACK_(NULL,NULL),CALLBACK_((ListNodeFreeFunction)freeCommandInfo,NULL));
   if (!RingBuffer_init(&clientInfo->abortedCommandIds,sizeof(uint),MAX_ABORT_COMMAND_IDS))
   {
     HALT_INSUFFICIENT_MEMORY();
@@ -19795,6 +19811,15 @@ LOCAL void doneClient(ClientInfo *clientInfo)
   DEBUG_CHECK_RESOURCE_TRACE(clientInfo);
 
   clientInfo->quitFlag = TRUE;
+
+  // wait for commands
+  SEMAPHORE_LOCKED_DO(&clientInfo->lock,SEMAPHORE_LOCK_TYPE_READ,LOCK_TIMEOUT)
+  {
+    while (!List_isEmpty(&clientInfo->commandInfoList))
+    {
+      Semaphore_waitModified(&clientInfo->lock,WAIT_FOREVER);
+    }
+  }
 
   // abort all running master jobs
   JOB_LIST_LOCKED_DO(SEMAPHORE_LOCK_TYPE_READ_WRITE,WAIT_FOREVER)
@@ -21070,10 +21095,7 @@ Errors Server_socket(void)
                 && (nowTimestamp > (authorizationFailNode->lastTimestamp+(uint64)MAX_AUTHORIZATION_HISTORY_KEEP_TIME*US_PER_MS))
                )
             {
-              authorizationFailNode = List_removeAndFree(&authorizationFailList,
-                                                         authorizationFailNode,
-                                                         CALLBACK_((ListNodeFreeFunction)freeAuthorizationFailNode,NULL)
-                                                        );
+              authorizationFailNode = List_removeAndFree(&authorizationFailList,authorizationFailNode);
             }
             else
             {
@@ -21104,10 +21126,7 @@ Errors Server_socket(void)
             }
 
             // remove oldest authorization failure from list
-            List_removeAndFree(&authorizationFailList,
-                               oldestAuthorizationFailNode,
-                               CALLBACK_((ListNodeFreeFunction)freeAuthorizationFailNode,NULL)
-                              );
+            List_removeAndFree(&authorizationFailList,oldestAuthorizationFailNode);
           }
         }
       }
